@@ -2072,7 +2072,7 @@ class tslib_fe {
 		global $TCA;
 		if (!$this->TCAloaded) {
 			$GLOBALS['TCA'] = array();
-			include (TYPO3_tables_script ? PATH_typo3conf.TYPO3_tables_script : PATH_t3lib.'stddb/tables.php');
+			include(PATH_t3lib . 'stddb/tables.php');
 				// Extension additions
 			if ($GLOBALS['TYPO3_LOADED_EXT']['_CACHEFILE'] && file_exists(PATH_typo3conf . $GLOBALS['TYPO3_LOADED_EXT']['_CACHEFILE'] . '_ext_tables.php')) {
 				include(PATH_typo3conf.$GLOBALS['TYPO3_LOADED_EXT']['_CACHEFILE'].'_ext_tables.php');
